WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34949
[Chromium] Fix StorageNamespaceProxy::copy() for test shell
https://bugs.webkit.org/show_bug.cgi?id=34949
Summary
[Chromium] Fix StorageNamespaceProxy::copy() for test shell
Jeremy Orlow
Reported
2010-02-15 10:56:10 PST
[Chromium] Fix StorageNamespaceProxy::copy() for test shell
Attachments
Patch
(2.16 KB, patch)
2010-02-15 11:07 PST
,
Jeremy Orlow
fishd
: review+
jorlow
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2010-02-15 11:07:31 PST
Created
attachment 48760
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-02-17 14:23:41 PST
Attachment 48760
[details]
was posted by a committer and has review+, assigning to Jeremy Orlow for commit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug