[Chromium] Fix StorageNamespaceProxy::copy() for test shell https://bugs.webkit.org/show_bug.cgi?id=34949

Reviewed by Darin Fisher.

Chromium passes back NULL when you call WebStorageNamespace::proxy()
but TestShell returns a valid object.  Both need to work via
the WebStorageNamespace.

* src/StorageNamespaceProxy.cpp:
(WebCore::StorageNamespaceProxy::copy):



Canonical link: https://commits.webkit.org/46110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54803 268f45cc-cd09-0410-ab3c-d52691b4dbfc